# axidev-io

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  README.md  build.py  conanfile.py  vcpkg.json
.github/actions/build-linux/: action.yml
.github/actions/build-macos/: action.yml
.github/actions/build-windows-mingw/: action.yml
.github/actions/build-windows-msvc/: action.yml
.github/workflows/: build-reusable.yml  ci.yml  integration-tests.yml  release.yml
.zed/: tasks.json
docs/: README.md
docs/consumers/: README.md
docs/developers/: README.md
examples/: example.cpp  example_c.c
include/axidev-io/: c_api.h  core.hpp  log.h  log.hpp
include/axidev-io/keyboard/: common.hpp  listener.hpp  sender.hpp
include/typr-io/: c_api.h  core.hpp  listener.hpp  log.hpp  sender.hpp
src/: c_api.c  c_api.cpp
src/common/: key_utils.cpp
src/core/: context.c  log.c
src/internal/: context.h  thread.h  utf.c
src/keyboard/common/: key_utils.c  key_utils.cpp  key_utils_internal.h  keymap.c  keymap.cpp  keymap.hpp  keymap_internal.h  linux_keysym.c  linux_keysym.cpp  linux_keysym.hpp  linux_keysym_internal.h  linux_layout.c  macos_keymap.hpp  macos_keymap.mm  windows_keymap.c  windows_keymap.cpp  windows_keymap.hpp  windows_keymap_internal.h
src/keyboard/listener/: listener_internal.h  listener_linux.c  listener_linux.cpp  listener_macos.mm  listener_windows.c  listener_windows.cpp
src/keyboard/sender/: sender_internal.h  sender_macos.mm  sender_uinput.c  sender_uinput.cpp  sender_windows.c  sender_windows.cpp
src/listener/: listener_linux.cpp  listener_macos.mm  listener_windows.cpp  listener_x11.cpp
src/mouse/: mouse_common.c  mouse_internal.h  mouse_linux.c  mouse_windows.c
src/sender/: sender_macos.mm  sender_uinput.cpp  sender_windows.cpp
test_consumer/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_assert.h  test_backend_thread.cpp  test_c_api.c  test_c_api.cpp  test_integration_listener.c  test_integration_listener.cpp  test_integration_sender.c  test_integration_sender.cpp  test_key_utils.c  test_key_utils.cpp
